--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "devDependencies": {
         "@eslint/js": "^9.19.0",
         "@types/node": "^22.13.5",
+        "@types/react-google-recaptcha": "^2.1.9",
         "@types/react-slick": "^0.23.13",
         "eslint": "^9.17.0",
         "eslint-config-prettier": "^10.0.1",
@@ -55,6 +56,7 @@
         "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-google-recaptcha": "^3.1.0",
         "react-hook-form": "^7.56.4",
         "react-slick": "^0.30.3",
         "recharts": "^2.15.3",
