--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.1.2",
+        "date-fns": "^4.1.0",
         "globals": "^15.15.0",
         "laravel-vite-plugin": "^1.3.0",
         "lucide-react": "^0.475.0",
