--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "josiasmontag/laravel-recaptchav3": "^1.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
+        "maatwebsite/excel": "^3.1",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.20",
         "tightenco/ziggy": "^2.4"
@@ -87,4 +88,5 @@
     },
     "minimum-stability": "stable",
     "prefer-stable": true
+
 }
