--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.8.3",
         "vite": "^6.3.5",
+        "xlsx": "^0.18.5",
         "zod": "^3.25.67"
     },
     "optionalDependencies": {
