Add additional fields and localization updates for users
Enhanced the user management form by introducing multiple new fields to capture additional user data. Updated field labels, placeholders, and text to support localization, and integrated role & permission handling in Inertia shared data.

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "anhskohbo/no-captcha": "^3.7",
+        "firebase/php-jwt": "^6.11",
         "inertiajs/inertia-laravel": "^2.0",
         "josiasmontag/laravel-recaptchav3": "^1.0",
         "laravel/framework": "^12.0",
