--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
         "@types/node": "^22.17.0",
         "@types/react-google-recaptcha": "^2.1.9",
         "@types/react-slick": "^0.23.13",
+        "@vitejs/plugin-react": "^5.0.0",
         "eslint": "^9.32.0",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-react": "^7.37.5",
         "eslint-plugin-react-hooks": "^5.2.0",
+        "glob": "^11.0.3",
+        "laravel-vite-plugin": "^2.0.0",
         "prettier": "^3.6.2",
         "prettier-plugin-organize-imports": "^4.2.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
-        "typescript-eslint": "^8.39.0"
+        "tailwindcss": "^4.1.11",
+        "typescript-eslint": "^8.39.0",
+        "vite": "^7.1.1"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.7",
@@ -47,13 +52,11 @@
         "@tanstack/react-table": "^8.21.3",
         "@types/react": "^19.1.9",
         "@types/react-dom": "^19.1.7",
-        "@vitejs/plugin-react": "^4.7.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.2.0",
         "date-fns": "^4.1.0",
         "globals": "^15.15.0",
-        "laravel-vite-plugin": "^1.3.0",
         "lucide-react": "^0.475.0",
         "next-themes": "^0.4.6",
         "react": "^19.1.1",
@@ -65,10 +68,8 @@
         "slick-carousel": "^1.8.1",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
-        "tailwindcss": "^4.1.11",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.9.2",
-        "vite": "^6.3.5",
         "xlsx": "^0.18.5",
         "zod": "^3.25.76"
     },
